--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "repository": "https://github.com/mit6148-workshops/react-skeleton",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
+    "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
     "start": "nodemon server/app.js"
   },
   "author": "",
