--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "a skeleton for starting a react project with webpack and babel",
   "repository": "https://github.com/mit6148-workshops/react-skeleton",
-  "main": "index.js",
+  "main": "server/server.js",
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
-    "start": "nodemon server/app.js"
+    "start": "nodemon server/server.js"
   },
   "author": "",
   "license": "ISC",
