--- a/package.json
+++ b/package.json
@@ -1,45 +1,52 @@
 {
-  "name": "react-skeleton",
+  "name": "possible",
   "version": "1.0.0",
-  "description": "a skeleton for starting a react project with webpack and babel",
-  "repository": "https://github.com/mit6148-workshops/react-skeleton",
+  "description": "",
   "main": "server/server.js",
   "scripts": {
     "hotloader": "webpack-dev-server --config ./webpack.config.js --mode development --port 5000",
-    "start": "nodemon server/server.js"
+    "start": "nodemon"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JoshFeldman95/react-skeleton"
   },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JoshFeldman95/react-skeleton/issues"
+  },
+  "homepage": "https://github.com/JoshFeldman95/react-skeleton#readme",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
+    "@reach/router": "^1.2.1",
+    "connect-ensure-login": "^0.1.1",
+    "core-js": "^3.3.6",
     "express": "^4.16.4",
+    "mongoose": "^5.7.7",
+    "nodemon": "^1.19.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-router-dom": "^4.3.1",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0"
+    "url-loader": "^1.1.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
-    "acorn": "^6.1.1",
-    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.0",
-    "eslint": "^5.16.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.9",
     "react-hot-loader": "^4.6.3",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.5.0",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-hot-middleware": "^2.24.3"
+    "webpack-dev-server": "^3.1.14"
   }
 }
